--- a/Example/RARFSlider/Base.lproj/Main.storyboard
+++ b/Example/RARFSlider/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,17 +20,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pn6-VA-dZf">
-                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pn6-VA-dZf">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="pn6-VA-dZf" secondAttribute="trailing" id="fzw-m6-Nsj"/>
+                            <constraint firstItem="pn6-VA-dZf" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="mHI-M3-nPj"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="pn6-VA-dZf" secondAttribute="bottom" id="uxT-Kz-rep"/>
+                            <constraint firstItem="pn6-VA-dZf" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="wyK-RB-To5"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="sliderView" destination="pn6-VA-dZf" id="mcI-Db-JdK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="123.68815592203899"/>
         </scene>
     </scenes>
 </document>
