--- a/RARFSlider/Classes/RARFSliderView/RARFSliderView.xib
+++ b/RARFSlider/Classes/RARFSliderView/RARFSliderView.xib
@@ -24,34 +24,40 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="0.0" translatesAutoresizingMaskIntoConstraints="NO" id="eLB-hK-AUd">
-                    <rect key="frame" x="-2" y="377" width="379" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="29" id="pp7-sh-9k3"/>
-                    </constraints>
+                    <rect key="frame" x="-2" y="377" width="379" height="31"/>
                 </slider>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cJ2-8q-jhB">
-                    <rect key="frame" x="0.0" y="273" width="80" height="80"/>
+                    <rect key="frame" x="0.0" y="250" width="80" height="80"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="80" id="0l1-EF-t5X"/>
-                        <constraint firstAttribute="height" constant="80" id="Nmq-e7-A6U"/>
+                        <constraint firstAttribute="height" constant="80" id="Fgz-xn-WrE"/>
+                        <constraint firstAttribute="width" constant="80" id="dVd-Up-u1J"/>
+                        <constraint firstAttribute="width" secondItem="cJ2-8q-jhB" secondAttribute="height" multiplier="1:1" id="tJ3-na-nTq"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DqO-xM-0tb">
-                    <rect key="frame" x="150" y="113" width="61" height="68"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DqO-xM-0tb">
+                    <rect key="frame" x="134" y="113" width="118" height="68"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="68" id="1ws-5j-SFn"/>
+                        <constraint firstAttribute="width" secondItem="DqO-xM-0tb" secondAttribute="height" multiplier="59:34" id="AMh-lb-t4v"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qiJ-0E-e7U">
-                    <rect key="frame" x="150" y="189" width="61" height="68"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qiJ-0E-e7U">
+                    <rect key="frame" x="134" y="182" width="118" height="68"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="qiJ-0E-e7U" secondAttribute="height" multiplier="59:34" id="82K-nT-kon"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cyl-ej-IZV">
                     <rect key="frame" x="164" y="488" width="47" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="47" id="9wb-W6-ZRq"/>
+                    </constraints>
                     <state key="normal" title="Button"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sso-NX-aj3">
@@ -60,20 +66,25 @@
                 </button>
             </subviews>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="cyl-ej-IZV" secondAttribute="bottom" constant="149" id="3wE-xE-rHI"/>
-                <constraint firstAttribute="trailing" secondItem="cyl-ej-IZV" secondAttribute="trailing" constant="164" id="8bj-Ik-YrE"/>
-                <constraint firstItem="cyl-ej-IZV" firstAttribute="leading" secondItem="cdk-ZE-bND" secondAttribute="leading" constant="164" id="Bhi-d4-7zN"/>
-                <constraint firstItem="cJ2-8q-jhB" firstAttribute="leading" secondItem="cdk-ZE-bND" secondAttribute="leading" id="Skj-gu-EI8"/>
-                <constraint firstItem="eLB-hK-AUd" firstAttribute="top" secondItem="cJ2-8q-jhB" secondAttribute="bottom" constant="24" id="VR9-PM-HIT"/>
-                <constraint firstAttribute="trailing" secondItem="eLB-hK-AUd" secondAttribute="trailing" id="bcs-p3-NTd"/>
-                <constraint firstItem="eLB-hK-AUd" firstAttribute="leading" secondItem="cJ2-8q-jhB" secondAttribute="leading" id="jCR-jq-bKD"/>
-                <constraint firstItem="Sso-NX-aj3" firstAttribute="centerY" secondItem="cdk-ZE-bND" secondAttribute="centerY" constant="111.5" id="vUQ-WZ-s9D"/>
-                <constraint firstItem="cyl-ej-IZV" firstAttribute="top" secondItem="eLB-hK-AUd" secondAttribute="bottom" constant="82" id="x2G-vj-xfy"/>
-                <constraint firstAttribute="bottom" secondItem="eLB-hK-AUd" secondAttribute="bottom" constant="261" id="xBu-D1-kA4"/>
-                <constraint firstItem="Sso-NX-aj3" firstAttribute="centerX" secondItem="cdk-ZE-bND" secondAttribute="centerX" id="zkm-4j-3xP"/>
+                <constraint firstItem="cyl-ej-IZV" firstAttribute="top" secondItem="Sso-NX-aj3" secondAttribute="bottom" constant="28" id="4YW-1U-PQd"/>
+                <constraint firstItem="eLB-hK-AUd" firstAttribute="centerX" secondItem="Sso-NX-aj3" secondAttribute="centerX" id="DC5-2F-iDE"/>
+                <constraint firstItem="Sso-NX-aj3" firstAttribute="top" secondItem="eLB-hK-AUd" secondAttribute="bottom" constant="23" id="GkB-xf-GHE"/>
+                <constraint firstItem="qiJ-0E-e7U" firstAttribute="top" secondItem="DqO-xM-0tb" secondAttribute="bottom" constant="1" id="KQR-Ay-DYW"/>
+                <constraint firstItem="eLB-hK-AUd" firstAttribute="top" secondItem="cJ2-8q-jhB" secondAttribute="bottom" constant="47" id="Ojq-rZ-lWp"/>
+                <constraint firstItem="qiJ-0E-e7U" firstAttribute="width" secondItem="DqO-xM-0tb" secondAttribute="width" id="P7G-Gu-cST"/>
+                <constraint firstAttribute="trailing" secondItem="eLB-hK-AUd" secondAttribute="trailing" id="R9v-KF-7sI"/>
+                <constraint firstItem="qiJ-0E-e7U" firstAttribute="height" secondItem="DqO-xM-0tb" secondAttribute="height" id="U35-jE-2PN"/>
+                <constraint firstItem="cJ2-8q-jhB" firstAttribute="top" secondItem="cdk-ZE-bND" secondAttribute="top" constant="250" id="dON-f0-PWV"/>
+                <constraint firstAttribute="trailing" secondItem="cJ2-8q-jhB" secondAttribute="trailing" constant="295" id="j3D-Fk-bd6"/>
+                <constraint firstItem="DqO-xM-0tb" firstAttribute="top" secondItem="cdk-ZE-bND" secondAttribute="top" constant="113" id="kNU-Yd-0sv"/>
+                <constraint firstItem="eLB-hK-AUd" firstAttribute="centerX" secondItem="cyl-ej-IZV" secondAttribute="centerX" id="nLL-9b-YFL"/>
+                <constraint firstItem="DqO-xM-0tb" firstAttribute="leading" secondItem="qiJ-0E-e7U" secondAttribute="leading" id="rqy-1h-18r"/>
+                <constraint firstItem="eLB-hK-AUd" firstAttribute="leading" secondItem="cJ2-8q-jhB" secondAttribute="leading" id="rri-Xm-Gyh"/>
+                <constraint firstItem="DqO-xM-0tb" firstAttribute="leading" secondItem="cdk-ZE-bND" secondAttribute="leading" constant="134" id="uUp-hd-ffe"/>
+                <constraint firstItem="cJ2-8q-jhB" firstAttribute="leading" secondItem="cdk-ZE-bND" secondAttribute="leading" id="xb8-fB-g2J"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="53.600000000000001" y="48.125937031484263"/>
+            <point key="canvasLocation" x="8.8000000000000007" y="47.226386806596707"/>
         </view>
     </objects>
 </document>
