--- a/RARFSlider/Classes/RARFSliderView/RARFSliderView.xib
+++ b/RARFSlider/Classes/RARFSliderView/RARFSliderView.xib
@@ -11,12 +11,13 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RARFSliderView" customModule="RARFSlider" customModuleProvider="target">
             <connections>
                 <outlet property="durationLabel" destination="qiJ-0E-e7U" id="f2B-nR-Ua6"/>
+                <outlet property="insideTrimButton" destination="h4z-Dl-2VV" id="V5i-1B-Ba8"/>
                 <outlet property="mergeButton" destination="EcJ-fz-td0" id="v4u-bb-dNW"/>
                 <outlet property="picBt" destination="Sso-NX-aj3" id="F0a-Gg-ygj"/>
                 <outlet property="slider" destination="eLB-hK-AUd" id="oPr-HI-Uqq"/>
                 <outlet property="thumnaiIImageView" destination="cJ2-8q-jhB" id="ybe-SQ-Tac"/>
                 <outlet property="timeLabel" destination="DqO-xM-0tb" id="A7L-jQ-Dqr"/>
-                <outlet property="trimButton" destination="cyl-ej-IZV" id="qeY-tL-FJe"/>
+                <outlet property="trimButton" destination="cyl-ej-IZV" id="LtM-ce-p0v"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -59,14 +60,21 @@
                     <constraints>
                         <constraint firstAttribute="width" constant="47" id="9wb-W6-ZRq"/>
                     </constraints>
-                    <state key="normal" title="Button"/>
+                    <state key="normal" title="Trim"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sso-NX-aj3">
                     <rect key="frame" x="172.5" y="430" width="30" height="30"/>
                     <state key="normal" title="Pic"/>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h4z-Dl-2VV" userLabel="InsideTrim">
+                    <rect key="frame" x="134" y="601" width="118" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="118" id="4JL-hD-Rzb"/>
+                    </constraints>
+                    <state key="normal" title="Inside Trim"/>
+                </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EcJ-fz-td0">
-                    <rect key="frame" x="164" y="549" width="47" height="30"/>
+                    <rect key="frame" x="164" y="544" width="47" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="47" id="mvY-De-qt3"/>
                     </constraints>
@@ -79,18 +87,20 @@
                 <constraint firstItem="eLB-hK-AUd" firstAttribute="centerX" secondItem="Sso-NX-aj3" secondAttribute="centerX" id="DC5-2F-iDE"/>
                 <constraint firstItem="Sso-NX-aj3" firstAttribute="top" secondItem="eLB-hK-AUd" secondAttribute="bottom" constant="23" id="GkB-xf-GHE"/>
                 <constraint firstItem="qiJ-0E-e7U" firstAttribute="top" secondItem="DqO-xM-0tb" secondAttribute="bottom" constant="1" id="KQR-Ay-DYW"/>
+                <constraint firstItem="h4z-Dl-2VV" firstAttribute="top" secondItem="EcJ-fz-td0" secondAttribute="bottom" constant="27" id="Kyq-yC-LYh"/>
                 <constraint firstItem="eLB-hK-AUd" firstAttribute="top" secondItem="cJ2-8q-jhB" secondAttribute="bottom" constant="47" id="Ojq-rZ-lWp"/>
                 <constraint firstItem="qiJ-0E-e7U" firstAttribute="width" secondItem="DqO-xM-0tb" secondAttribute="width" id="P7G-Gu-cST"/>
                 <constraint firstAttribute="trailing" secondItem="eLB-hK-AUd" secondAttribute="trailing" id="R9v-KF-7sI"/>
                 <constraint firstItem="qiJ-0E-e7U" firstAttribute="height" secondItem="DqO-xM-0tb" secondAttribute="height" id="U35-jE-2PN"/>
                 <constraint firstItem="cJ2-8q-jhB" firstAttribute="top" secondItem="cdk-ZE-bND" secondAttribute="top" constant="250" id="dON-f0-PWV"/>
+                <constraint firstItem="h4z-Dl-2VV" firstAttribute="leading" secondItem="EcJ-fz-td0" secondAttribute="leading" constant="-30" id="gDh-Jo-CMS"/>
                 <constraint firstAttribute="trailing" secondItem="cJ2-8q-jhB" secondAttribute="trailing" constant="295" id="j3D-Fk-bd6"/>
                 <constraint firstItem="DqO-xM-0tb" firstAttribute="top" secondItem="cdk-ZE-bND" secondAttribute="top" constant="113" id="kNU-Yd-0sv"/>
                 <constraint firstItem="eLB-hK-AUd" firstAttribute="centerX" secondItem="cyl-ej-IZV" secondAttribute="centerX" id="nLL-9b-YFL"/>
                 <constraint firstItem="DqO-xM-0tb" firstAttribute="leading" secondItem="qiJ-0E-e7U" secondAttribute="leading" id="rqy-1h-18r"/>
                 <constraint firstItem="eLB-hK-AUd" firstAttribute="leading" secondItem="cJ2-8q-jhB" secondAttribute="leading" id="rri-Xm-Gyh"/>
                 <constraint firstItem="DqO-xM-0tb" firstAttribute="leading" secondItem="cdk-ZE-bND" secondAttribute="leading" constant="134" id="uUp-hd-ffe"/>
-                <constraint firstItem="EcJ-fz-td0" firstAttribute="top" secondItem="cyl-ej-IZV" secondAttribute="bottom" constant="31" id="wi0-bP-rbq"/>
+                <constraint firstItem="EcJ-fz-td0" firstAttribute="top" secondItem="cyl-ej-IZV" secondAttribute="bottom" constant="26" id="wi0-bP-rbq"/>
                 <constraint firstItem="cJ2-8q-jhB" firstAttribute="leading" secondItem="cdk-ZE-bND" secondAttribute="leading" id="xb8-fB-g2J"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
